Changes for vcmi-1.2

--- a/cathedral-town/Content/translation/cathedral/german.json
+++ b/cathedral-town/Content/translation/cathedral/german.json
@@ -208,5 +208,5 @@
 	"spell.cathedral-town.punishment.name" : "Bestrafung",
 	"spell.cathedral-town.redeem.name" : "Einlösen",
 	"spell.cathedral-town.scratch.name" : "Kratzer",
-	"spell.cathedral-town.temPrayer.name" : "Himmlisches Licht",
+	"spell.cathedral-town.temPrayer.name" : "Himmlisches Licht"
 }
