New hero portraits

--- a/cathedral-town/Content/translation/cathedral/chinese.json
+++ b/cathedral-town/Content/translation/cathedral/chinese.json
@@ -182,11 +182,11 @@
 	"hero.cathedral-town.sveneld.specialty.description" : "战斗中使敌人运气-1。",
 	"hero.cathedral-town.sveneld.specialty.name" : "-1运气",
 	"hero.cathedral-town.sveneld.specialty.tooltip" : "Creature Bonus: Nerubians",
-	"hero.cathedral-town.svetlana.biography" : "阿曼达在灾难发生之前，就被父母送去了埃拉西亚的神学院。当她回到家乡之时，却发现父母和妹妹都已经被亡灵所害。为此，她不再将神灵作为唯一的寄托。也许支持自己活下去的目的，仅仅是复仇。",
-	"hero.cathedral-town.svetlana.name" : "阿曼达",
-	"hero.cathedral-town.svetlana.specialty.description" : "战斗中使敌人士气-1。",
-	"hero.cathedral-town.svetlana.specialty.name" : "-1士气",
-	"hero.cathedral-town.svetlana.specialty.tooltip" : "Creature Bonus: Nerubians",
+	"hero.cathedral-town.amanda.biography" : "阿曼达在灾难发生之前，就被父母送去了埃拉西亚的神学院。当她回到家乡之时，却发现父母和妹妹都已经被亡灵所害。为此，她不再将神灵作为唯一的寄托。也许支持自己活下去的目的，仅仅是复仇。",
+	"hero.cathedral-town.amanda.name" : "阿曼达",
+	"hero.cathedral-town.amanda.specialty.description" : "战斗中使敌人士气-1。",
+	"hero.cathedral-town.amanda.specialty.name" : "-1士气",
+	"hero.cathedral-town.amanda.specialty.tooltip" : "Creature Bonus: Nerubians",
 	"hero.cathedral-town.tarinus.biography" : "派伦西亚出生在一个高贵的骑士家庭，并且从小就立志做一名牧师。她随时都在等待神的指示，尽管很多情况下的祈祷都是徒劳无功的。为了获得神的力量，她变得越来越狂热。",
 	"hero.cathedral-town.tarinus.name" : "派伦西亚",
 	"hero.cathedral-town.tarinus.specialty.description" : "达到5级以后提高执事和领唱者的攻击力和防御力。",
