--- a/cathedral-town/Content/translation/cathedral/french.json
+++ b/cathedral-town/Content/translation/cathedral/french.json
@@ -1,14 +1,14 @@
 {
-	"building.cathedral-town.cathedral.blacksmith.description" : "La forge équipe votre armée de la tente de premier secours.",
+	"building.cathedral-town.cathedral.blacksmith.description" : "La Forge fournit des dispensaires à vos héros.",
 	"building.cathedral-town.cathedral.blacksmith.name" : "Forge",
-	"building.cathedral-town.cathedral.capitol.description" : "Le Capitole fait gagner 4 000 or par jour à votre royaume.",
-	"building.cathedral-town.cathedral.capitol.name" : "Capitole",
-	"building.cathedral-town.cathedral.castle.description" : "Le château ajoute deux tours de tireurs, fortifie les défenses de votre ville, et double la croissance de base des créatures.",
+	"building.cathedral-town.cathedral.capitol.description" : "Une Capitale vous rapporte 4000 pièces d'Or par jour.",
+	"building.cathedral-town.cathedral.capitol.name" : "Capitale",
+	"building.cathedral-town.cathedral.castle.description" : "Le Château ajoute deux tours de tireurs, fortifie les défenses de votre ville, et double la croissance de base des créatures.",
 	"building.cathedral-town.cathedral.castle.name" : "Château",
 	"building.cathedral-town.cathedral.citadel.description" : "Incluant une augmentation de 50% à la croissance de base des créatures, la Citadelle ajoute un donjon, et d'autres obstacles de terrain, aux défenses de la ville.",
 	"building.cathedral-town.cathedral.citadel.name" : "Citadelle",
-	"building.cathedral-town.cathedral.cityHall.description" : "Le Hall de la ville vous permet d'acheter town structures de ville et de faire gagner 2 000 or par jour à votre royaume.",
-	"building.cathedral-town.cathedral.cityHall.name" : "Hall de la ville",
+	"building.cathedral-town.cathedral.cityHall.description" : "La Cité vous permet d'acheter des bâtiments et de faire gagner 2000 pièces d'Or par jour à votre royaume.",
+	"building.cathedral-town.cathedral.cityHall.name" : "Cité",
 	"building.cathedral-town.cathedral.dwellingLvl1.description" : "La Butte vous permet de recruter des chiens de chasse.",
 	"building.cathedral-town.cathedral.dwellingLvl1.name" : "Butte",
 	"building.cathedral-town.cathedral.dwellingLvl2.description" : "La Guillotine vous permet de recruter des pourfendeurs.",
@@ -39,7 +39,7 @@
 	"building.cathedral-town.cathedral.dwellingUpLvl7.name" : "Sanctuaire maudit amél.",
 	"building.cathedral-town.cathedral.fort.description" : "Le Fort fournit des murs défensifs à votre ville.",
 	"building.cathedral-town.cathedral.fort.name" : "Fort",
-	"building.cathedral-town.cathedral.grail.description" : "La Lumière du Jugement augmente chaque semaine par 50% la génération des créatures et ajoute 5 000 or par jour. Et elle apporte 7 minerais (pour respectivement chaque catégorie de ressource) pour votre royaume. Elle augmente aussi de 5 pouvoirs la défense de vos héros.",
+	"building.cathedral-town.cathedral.grail.description" : "La Lumière du Jugement augmente chaque semaine par 50% la génération des créatures et ajoute 5000 pièces d'Or par jour. Et elle apporte 7 minerais (pour respectivement chaque catégorie de ressource) pour votre royaume. Elle augmente aussi de 5 pouvoirs la défense de vos héros.",
 	"building.cathedral-town.cathedral.grail.name" : "Lumière du Jugement",
 	"building.cathedral-town.cathedral.horde1.description" : "La Chambre de Torture augmente la production de Pourfendeurs de 6 par semaine.",
 	"building.cathedral-town.cathedral.horde1.name" : "Chambre de Torture",
@@ -59,21 +59,21 @@
 	"building.cathedral-town.cathedral.mageGuild4.name" : "Guilde des Mages 4",
 	"building.cathedral-town.cathedral.mageGuild5.description" : "Entrer dans la Guilde des Mages permettra à un héro en visite d'apprendre les sorts qu'elle renferme.",
 	"building.cathedral-town.cathedral.mageGuild5.name" : "Guilde des Mages 5",
-	"building.cathedral-town.cathedral.marketplace.description" : "Avec le marché, vous pouvez acheter et vendre des ressources (les taux de change augmentent avec chaque marché que vous possédez).",
+	"building.cathedral-town.cathedral.marketplace.description" : "Le Marché vous permet d'échanger des ressources (plus vous contrôlez de marché, plus les taux sont intéressants).",
 	"building.cathedral-town.cathedral.marketplace.name" : "Marché",
-	"building.cathedral-town.cathedral.resourceSilo.description" : "Le silo de ressources vous fournit +1 soufre supplémentaire chaque jour.",
+	"building.cathedral-town.cathedral.resourceSilo.description" : "Le Silo de ressources vous fournit +1 soufre supplémentaire chaque jour.",
 	"building.cathedral-town.cathedral.resourceSilo.name" : "Silo de ressources",
-	"building.cathedral-town.cathedral.special1.description" : "La station de dons rapporte à votre royaume 350 pièces d'or par jour.",
+	"building.cathedral-town.cathedral.special1.description" : "La Station de dons rapporte à votre royaume 350 pièces d'or par jour.",
 	"building.cathedral-town.cathedral.special1.name" : "Station de dons",
-	"building.cathedral-town.cathedral.special2.description" : "La station du salut augmente la chance du héros de la garnison de +2 lorsqu'il se défend contre un siège.",
+	"building.cathedral-town.cathedral.special2.description" : "La Station du salut augmente la chance du héros de la garnison de +2 lorsqu'il se défend contre un siège.",
 	"building.cathedral-town.cathedral.special2.name" : "Station du salut",
 	"building.cathedral-town.cathedral.special3.description" : "La Chapelle de la Confession augmente le moral de 1 pour les troupes défendant la ville.",
 	"building.cathedral-town.cathedral.special3.name" : "Chapelle de la Confession",
-	"building.cathedral-town.cathedral.tavern.description" : "La taverne augmente le moral des troupes qui défendent la ville.",
+	"building.cathedral-town.cathedral.tavern.description" : "Grâce à la Taverne, le moral des troupes qui défendent la ville augmente d'un point.",
 	"building.cathedral-town.cathedral.tavern.name" : "Taverne",
-	"building.cathedral-town.cathedral.townHall.description" : "La ville vous permet d'acheter des bâtiments et rapporte à votre royaume 1 000 pièces d'or par jour.",
+	"building.cathedral-town.cathedral.townHall.description" : "La Ville vous permet d'acheter des bâtiments et rapporte à votre royaume 1000 pièces d'or par jour.",
 	"building.cathedral-town.cathedral.townHall.name" : "Ville",
-	"building.cathedral-town.cathedral.villageHall.description" : "Le village vous permet d'acheter des structures de la ville et rapporte à votre royaume 500 pièces d'or par jour.",
+	"building.cathedral-town.cathedral.villageHall.description" : "Le Village vous permet d'acheter des structures de la ville et rapporte à votre royaume 500 pièces d'or par jour.",
 	"building.cathedral-town.cathedral.villageHall.name" : "Village",
 	"creatures.cathedral-town.cthAttackDog.name.plural" : "Chiens de chasse",
 	"creatures.cathedral-town.cthAttackDog.name.singular" : "Chien de chasse",
@@ -181,11 +181,11 @@
 	"hero.cathedral-town.sveneld.specialty.description" : "{-1 de chance}\r\n\r\n-1 de chance à tous les ennemis pendant la bataille.",
 	"hero.cathedral-town.sveneld.specialty.name" : "-1 de chance",
 	"hero.cathedral-town.sveneld.specialty.tooltip" : "Bonus de malheur",
-	"hero.cathedral-town.svetlana.biography" : "Semblable à Gabrielle, Amanda a vu ses parents et ses sœurs mourir dans le Désastre à un très jeune âge. Elle a été sauvée par des prêtres de l'église. Maintenant elle est également devenue une revancharde pour les nécromanciens.",
-	"hero.cathedral-town.svetlana.name" : "Amanda",
-	"hero.cathedral-town.svetlana.specialty.description" : "{-1 de morale}\r\n\r\n-1 de morale à tous les ennemis pendant la bataille.",
-	"hero.cathedral-town.svetlana.specialty.name" : "-1 de morale",
-	"hero.cathedral-town.svetlana.specialty.tooltip" : "Bonus de déprime",
+	"hero.cathedral-town.amanda.biography" : "Semblable à Gabrielle, Amanda a vu ses parents et ses sœurs mourir dans le Désastre à un très jeune âge. Elle a été sauvée par des prêtres de l'église. Maintenant elle est également devenue une revancharde pour les nécromanciens.",
+	"hero.cathedral-town.amanda.name" : "Amanda",
+	"hero.cathedral-town.amanda.specialty.description" : "{-1 de morale}\r\n\r\n-1 de morale à tous les ennemis pendant la bataille.",
+	"hero.cathedral-town.amanda.specialty.name" : "-1 de morale",
+	"hero.cathedral-town.amanda.specialty.tooltip" : "Bonus de déprime",
 	"hero.cathedral-town.tarinus.biography" : "Héloïse est devenue fanatique après le Désastre, même si elle n'était qu'une apprentie clerc auparavant. Elle avait vu ses camarades de classe tous morts dans le Désastre, alors elle a décidé de se battre pour elle-même. Maintenant, elle est devenue un grand prêtre pour l'église.",
 	"hero.cathedral-town.tarinus.name" : "Héloïse",
 	"hero.cathedral-town.tarinus.specialty.description" : "{Sacristains}\r\n\r\nAugmente la vitesse de tous les sacristains et chantres de 1 et leurs compétences d'attaque et de défense de 5 % tous les 5 niveaux (arrondi au supérieur).",
