--- a/cathedral-town/Content/translation/cathedral/german.json
+++ b/cathedral-town/Content/translation/cathedral/german.json
@@ -181,11 +181,11 @@
 	"hero.cathedral-town.sveneld.specialty.description" : "{-1 Glück}\r\n\r\nAlle Feinde -1 Glück im Kampf.",
 	"hero.cathedral-town.sveneld.specialty.name" : "-1 Glück",
 	"hero.cathedral-town.sveneld.specialty.tooltip" : "Bonus: Unglück",
-	"hero.cathedral-town.svetlana.biography" : "Ähnlich wie Gabrielle hatte Amanda in sehr jungem Alter den Tod ihrer Eltern und Schwestern im Disaster miterlebt. Sie wurde von Priestern der Kirche gerettet, nun wurde auch sie eine Rächerin für Nekromanten.",
-	"hero.cathedral-town.svetlana.name" : "Amanda",
-	"hero.cathedral-town.svetlana.specialty.description" : "{-1 Moral}\r\n\r\nAlle Feinde -1 Moral während des Kampfes.",
-	"hero.cathedral-town.svetlana.specialty.name" : "-1 Moral",
-	"hero.cathedral-town.svetlana.specialty.tooltip" : "Bonus: -1 Moral",
+	"hero.cathedral-town.amanda.biography" : "Ähnlich wie Gabrielle hatte Amanda in sehr jungem Alter den Tod ihrer Eltern und Schwestern im Disaster miterlebt. Sie wurde von Priestern der Kirche gerettet, nun wurde auch sie eine Rächerin für Nekromanten.",
+	"hero.cathedral-town.amanda.name" : "Amanda",
+	"hero.cathedral-town.amanda.specialty.description" : "{-1 Moral}\r\n\r\nAlle Feinde -1 Moral während des Kampfes.",
+	"hero.cathedral-town.amanda.specialty.name" : "-1 Moral",
+	"hero.cathedral-town.amanda.specialty.tooltip" : "Bonus: -1 Moral",
 	"hero.cathedral-town.tarinus.biography" : "Palencia wurde nach der Katastrophe zur Fanatikerin. Auch wenn sie vorher nur ein Klerikerlehrling war. Sie hatte gesehen, dass ihre Klassenkameraden bei der Katastrophe ums Leben gekommen waren, also beschloss sie, für sich selbst zu kämpfen. Jetzt wurde sie Hohepriesterin der Kirche.",
 	"hero.cathedral-town.tarinus.name" : "Palencia",
 	"hero.cathedral-town.tarinus.specialty.description" : "{Sextonen}\r\n\r\nErhöht die Geschwindigkeit von Sextonen und Kantoren um 1 und ihre Angriffs- und Verteidigungsfertigkeiten um 5% für jeweils 5 Stufen (aufgerundet).",
