update Chinese translation

--- a/cathedral-town/Content/translation/cathedral/chinese.json
+++ b/cathedral-town/Content/translation/cathedral/chinese.json
@@ -204,7 +204,21 @@
 	"hero.cathedral-town.vseglas.specialty.tooltip" : "Secondary Skill Bonus: luck",
 	"heroClass.cathedral-town.cthbishop.name" : "主教",
 	"heroClass.cathedral-town.redtemplar.name" : "神殿骑士",
+    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel1.name": "废弃小屋",
+    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel2.name": "刑场",
+    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel3.name": "猎人公会",
+    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel4.name": "废墟",
+    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel5.name": "礼拜堂",
+    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel6.name": "圣武士序列",
+    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel7.name": "审判祭坛",
 	"spell.cathedral-town.cantorShot.name" : "圣言",
+    "spell.cathedral-town.cathedralMoat.name" : "疫河",
+    "spell.cathedral-town.cathedralMoatTrigger.name" : "疫河",
+    "spell.cathedral-town.confessionSong.description.advanced" : "{中级忏悔圣歌}\n\n降低目标单位攻击，防御和速度。\n\n效果是初级的2倍。",
+    "spell.cathedral-town.confessionSong.description.basic" : "{初级忏悔圣歌}\n\n降低目标单位攻击，防御和速度。",
+    "spell.cathedral-town.confessionSong.description.expert" : "{高级忏悔圣歌}\n\n降低敌方所有单位攻击，防御和速度。\n\n效果是初级的2倍。",
+    "spell.cathedral-town.confessionSong.description.none" : "{忏悔圣歌}\n\n降低目标单位攻击，防御和速度。",
+    "spell.cathedral-town.confessionSong.name" : "忏悔圣歌",
 	"spell.cathedral-town.conviction.name" : "天罚",
 	"spell.cathedral-town.divineRevenge.description.advanced" : "{中级神圣复仇}\n\n使对手受到大量伤害，并降低该回合的攻击力和防御力。\n\n效果是初级的1.5倍。\n",
 	"spell.cathedral-town.divineRevenge.description.basic" : "{初级神圣复仇}\n\n使对手受到大量伤害，并降低该回合的攻击力和防御力。\n",
@@ -214,12 +228,5 @@
 	"spell.cathedral-town.punishment.name" : "惩戒",
 	"spell.cathedral-town.redeem.name" : "救赎",
 	"spell.cathedral-town.scratch.name" : "撕裂",
-	"spell.cathedral-town.temPrayer.name" : "圣光",
-    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel1.name": "废弃小屋",
-    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel2.name": "刑场",
-    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel3.name": "猎人公会",
-    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel4.name": "废墟",
-    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel5.name": "礼拜堂",
-    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel6.name": "圣武士序列",
-    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel7.name": "审判祭坛"
+	"spell.cathedral-town.temPrayer.name" : "圣光"
 }
