update Chinese translation

--- a/cathedral-town/Content/translation/cathedral/chinese.json
+++ b/cathedral-town/Content/translation/cathedral/chinese.json
@@ -156,7 +156,7 @@
 	"hero.cathedral-town.patricia.name" : "卢塞洛",
 	"hero.cathedral-town.patricia.specialty.description" : "达到3级以后提高猎巫人和猎魔人的攻击力和防御力。",
 	"hero.cathedral-town.patricia.specialty.name" : "猎巫人",
-	"hero.cathedral-town.patricia.specialty.tooltip" : "Bonus: WitchHunter",
+	"hero.cathedral-town.patricia.specialty.tooltip" : "特长：猎巫人",
 	"hero.cathedral-town.ranin.biography" : "冯-费德勒是最年长的幸存者。在灾难到来之时，他是这座城镇的总督。虽然他在灾难中幸存，但他的3个孩子和妻子却死在了亡灵的手中。人们有时会看到他出现在小教堂中，对着神灵忏悔。直到现在，他还是坚信这一切都是自己的过错。",
 	"hero.cathedral-town.ranin.name" : "冯-费德勒",
 	"hero.cathedral-town.ranin.specialty.description" : "在抵抗力上每级获得5%的奖励。",
@@ -176,17 +176,17 @@
 	"hero.cathedral-town.susan.name" : "卡梅莉娅",
 	"hero.cathedral-town.susan.specialty.description" : "使用寒冰魔环魔法时效果大增，但还要取决于英雄级别与目标级别之差(目标的级别越低，效果越好)。",
 	"hero.cathedral-town.susan.specialty.name" : "寒冰魔环",
-	"hero.cathedral-town.susan.specialty.tooltip" : "",
+	"hero.cathedral-town.susan.specialty.tooltip" : "特长：寒冰魔环",
 	"hero.cathedral-town.sveneld.biography" : "加布里埃尔是一位牧师的女儿。当年还是孩子的她就目睹了这场灾难。在漆黑的小屋中，她整整度过了几个星期。没有人比她更痛恨罪恶。她选择成为一名牧师，当然是为了惩罚所有的罪恶者。",
 	"hero.cathedral-town.sveneld.name" : "加布里埃尔",
 	"hero.cathedral-town.sveneld.specialty.description" : "战斗中使敌人运气-1。",
 	"hero.cathedral-town.sveneld.specialty.name" : "-1运气",
-	"hero.cathedral-town.sveneld.specialty.tooltip" : "Creature Bonus: Nerubians",
+	"hero.cathedral-town.sveneld.specialty.tooltip" : "-1运气",
 	"hero.cathedral-town.amanda.biography" : "阿曼达在灾难发生之前，就被父母送去了埃拉西亚的神学院。当她回到家乡之时，却发现父母和妹妹都已经被亡灵所害。为此，她不再将神灵作为唯一的寄托。也许支持自己活下去的目的，仅仅是复仇。",
 	"hero.cathedral-town.amanda.name" : "阿曼达",
 	"hero.cathedral-town.amanda.specialty.description" : "战斗中使敌人士气-1。",
 	"hero.cathedral-town.amanda.specialty.name" : "-1士气",
-	"hero.cathedral-town.amanda.specialty.tooltip" : "Creature Bonus: Nerubians",
+	"hero.cathedral-town.amanda.specialty.tooltip" : "-1士气",
 	"hero.cathedral-town.tarinus.biography" : "派伦西亚出生在一个高贵的骑士家庭，并且从小就立志做一名牧师。她随时都在等待神的指示，尽管很多情况下的祈祷都是徒劳无功的。为了获得神的力量，她变得越来越狂热。",
 	"hero.cathedral-town.tarinus.name" : "派伦西亚",
 	"hero.cathedral-town.tarinus.specialty.description" : "达到5级以后提高执事和领唱者的攻击力和防御力。",
@@ -196,12 +196,12 @@
 	"hero.cathedral-town.volh.name" : "让-塞萨",
 	"hero.cathedral-town.volh.specialty.description" : "使用连珠火球魔法时效果大增，但还要取决于英雄级别与目标级别之差(目标的级别越低，效果越好)。",
 	"hero.cathedral-town.volh.specialty.name" : "连珠火球",
-	"hero.cathedral-town.volh.specialty.tooltip" : "Secondary Skill Bonus: luck",
+	"hero.cathedral-town.volh.specialty.tooltip" : "特长：连珠火球",
 	"hero.cathedral-town.vseglas.biography" : "作为男爵冯-克洛希奇的夫人，蕾娜无忧无虑地生活在她的庄园里。一切都有仆人照料。然而当灾难侵袭了她的庄园，她发现丈夫和所有的仆人都变成了死灵。在牧师的帮助下，她逃离了。随后，她决心为丈夫复仇，从而加入了教会。",
 	"hero.cathedral-town.vseglas.name" : "蕾娜",
 	"hero.cathedral-town.vseglas.specialty.description" : "使用虚弱无力魔法时效果大增，但还要取决于英雄级别与目标级别之差(目标的级别越低，效果越好)。",
 	"hero.cathedral-town.vseglas.specialty.name" : "虚弱无力",
-	"hero.cathedral-town.vseglas.specialty.tooltip" : "Secondary Skill Bonus: luck",
+	"hero.cathedral-town.vseglas.specialty.tooltip" : "特长：虚弱无力",
 	"heroClass.cathedral-town.cthbishop.name" : "主教",
 	"heroClass.cathedral-town.redtemplar.name" : "神殿骑士",
     "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel1.name": "废弃小屋",
